--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,9 +46,8 @@
     <string name="msg_current_version">Version 0.3.0</string>
     <string name="email">pdrolourenco@gmail.com</string>
     <string name="msg_email">"Contact: "</string>
-    
-    
-     <!-- Readers activity -->
+
+    <!-- Readers activity -->
     <string name="academicStatus">"Academic Status"</string>
     <string name="countryStatus">"Country"</string>
 
@@ -70,7 +69,6 @@
     <string name="menu_about">About</string>
     <string name="menu_refresh">Refresh</string>
     <string name="title_activity_readers">ReadersActivity</string>
-
     <string name="progress_dialog_title_downloading">Downloading...</string>
     <string name="progress_dialog_title_connecting">Connecting...</string>
     <string name="progress_dialog_message_prefix_downloading">Downloading file</string>
@@ -80,5 +78,6 @@
     <string name="error_message_bad_url">Error: Invalid URL!</string>
     <string name="error_message_file_not_found">Error: File not found!</string>
     <string name="error_message_general">Error downloading file!</string>
+    <string name="title_activity_doc_tags">DocTagsActivity</string>
 
 </resources>
