--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title">Paper Reader</string>
-    <string name="auth">Sing in</string>
+    <string name="auth">Sign in</string>
     <string name="createaccount">Create account</string>
     <string name="my_library"><b>My Library</b></string>
     <string name="my_folders"><b>Folders</b></string>
